--- a/practice.html
+++ b/practice.html
@@ -88,7 +88,7 @@
             </tr>
             <tr>
                 <td>
-                    Fries
+                    French Fries
                 </td>
                 <td>
                     Hand cut potatoes lightly fried and seasoned
